# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
FMS_BASE_DIR = "//foundation/filemanagement/user_file_service/services"

ohos_shared_library("filemanager") {
  subsystem_name = "filemanagement"
  part_name = "user_file_service"

  relative_install_dir = "module"

  include_dirs = [
    "//third_party/node/src",
    "//foundation/arkui/napi/interfaces/kits",
    "//utils/native/base/include",
    "//third_party/libuv/include",
    "$FMS_BASE_DIR/include",
    "$FMS_BASE_DIR/src/client",
    "$FMS_BASE_DIR/src/server",
    "$FMS_BASE_DIR/src/fileoper",
    "//foundation/distributeddatamgr/distributedfile/interfaces/kits/js/src/common/napi/n_async",
    "//foundation/distributeddatamgr/distributedfile/interfaces/kits/js/src/common/napi",
    "//foundation/distributeddatamgr/distributedfile/interfaces/kits/js/src/common",
    "//foundation/multimedia/medialibrary_standard/interfaces/innerkits/native/include",
  ]

  sources = [
    "src/file_manager_napi.cpp",
    "src/module.cpp",
  ]

  deps = [
    "$FMS_BASE_DIR:fms_server",
    "//foundation/arkui/napi:ace_napi",
    "//foundation/distributeddatamgr/distributedfile/interfaces/kits/js:fileio",
    "//foundation/multimedia/medialibrary_standard/frameworks/innerkitsimpl/medialibrary_data_ability:medialibrary_data_ability",
    "//utils/native/base:utils",
  ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}
