# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/filemanagement/user_file_service/filemanagement_aafwk.gni")
ohos_fuzztest("FileInfoSharedMemoryCreateSharedMemoryFuzzTest") {
  module_out_path = "user_file_service/user_file_service"
  fuzz_config_file =
      "${user_file_service_path}/test/fuzztest/fileinfosharedmemorycreatesharedmemory_fuzzer"
  include_dirs = [
    "${user_file_service_path}/interfaces/inner_api/file_access/include",
    "${user_file_service_path}/interfaces/kits/js/src/common",
    "${user_file_service_path}/utils",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "${user_file_service_path}/test/fuzztest/fileinfosharedmemorycreatesharedmemory_fuzzer/fileinfosharedmemory_createsharedmemory_fuzzer.cpp"
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]

  defines = [ "private=public" ]
}
