# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/filemanagement/user_file_service/filemanagement_aafwk.gni")

ohos_shared_library("fileaccess") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  subsystem_name = "filemanagement"
  part_name = "user_file_service"

  relative_install_dir = "module/file"

  include_dirs = [
    "./",
    "${user_file_service_path}/frameworks/js/napi/common",
    "${user_file_service_path}/frameworks/js/napi/file_access_module/file_info",
    "${user_file_service_path}/frameworks/js/napi/file_access_module/root_info",
    "${user_file_service_path}/utils",
    "${user_file_service_path}/services/native/file_access_service/include",
    "${user_file_service_path}/interfaces/kits/js/src/common",
  ]

  sources = [
    "${user_file_service_path}/frameworks/js/napi/common/file_extension_info_napi.cpp",
    "file_info/napi_file_info_exporter.cpp",
    "file_info/napi_file_iterator_exporter.cpp",
    "napi_fileaccess_helper.cpp",
    "napi_observer_callback.cpp",
    "napi_utils.cpp",
    "native_fileaccess_module.cpp",
    "root_info/napi_root_info_exporter.cpp",
    "root_info/napi_root_iterator_exporter.cpp",
  ]

  deps = [
    "${user_file_service_path}/interfaces/inner_api/file_access:file_access_ext_base_include",
    "${user_file_service_path}/interfaces/inner_api/file_access:file_access_extension_ability_kit",
    "${user_file_service_path}/services:file_access_service",
    "${user_file_service_path}/services:file_access_service_base_include",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:abilitykit_native",
    "ability_runtime:extensionkit_native",
    "ability_runtime:napi_base_context",
    "ability_runtime:napi_common",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "file_api:filemgmt_libhilog",
    "file_api:filemgmt_libn",
    "hilog:libhilog",
    "ipc:ipc_core",
    "ipc:ipc_single",
    "napi:ace_napi",
  ]
}
