# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/filemanagement/user_file_service/filemanagement_aafwk.gni")

ohos_shared_library("fileextensioninfo") {
  subsystem_name = "filemanagement"
  part_name = "user_file_service"
  relative_install_dir = "module/file"

  include_dirs = [
    ".",
    "${user_file_service_path}/interfaces/inner_api/file_access/include",
    "${user_file_service_path}/interfaces/inner_api/file_access/include/notify",
    "${user_file_service_path}/frameworks/js/napi/common",
    "${user_file_service_path}/utils",
  ]

  sources = [
    "${user_file_service_path}/frameworks/js/napi/common/file_extension_info_napi.cpp",
    "module_export_napi.cpp",
  ]

  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "file_api:filemgmt_libn",
    "hiviewdfx_hilog_native:libhilog",
  ]
}
