# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
BASE_DIR = "//foundation/filemanagement/user_file_service"

ohos_shared_library("fileaccess") {
  subsystem_name = "filemanagement"
  part_name = "user_file_service"

  relative_install_dir = "module/data"

  include_dirs = [
    "./",
    "${BASE_DIR}/utils",
    "${BASE_DIR}/interfaces/kits/napi/common",
    "//foundation/distributeddatamgr/distributedfile/interfaces/kits/js/src/common/napi",
    "//foundation/distributeddatamgr/distributedfile/interfaces/kits/js/src/common",
  ]

  sources = [
    "${BASE_DIR}/interfaces/kits/napi/common/file_extension_info_napi.cpp",
    "napi_fileaccess_helper.cpp",
    "native_fileaccess_module.cpp",
  ]

  deps = [
    "${BASE_DIR}/frameworks/innerkits/file_access:file_access_extension_ability_kit",
    "//foundation/ability/ability_runtime/frameworks/js/napi/aafwk/inner/napi_common:napi_common",
    "//foundation/distributeddatamgr/distributedfile/interfaces/kits/js:fileio",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:abilitykit_native",
    "ability_runtime:napi_base_context",
    "hiviewdfx_hilog_native:libhilog",
    "napi:ace_napi",
    "utils_base:utils",
  ]
}
