# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

UFS_BASE_PATH = "//foundation/filemanagement/user_file_service"
FRAMEWORK_PATH = "${UFS_BASE_PATH}/frameworks"

ohos_shared_library("fileextensioninfo") {
  subsystem_name = "filemanagement"
  part_name = "user_file_service"
  relative_install_dir = "module"

  include_dirs = [
    ".",
    "${UFS_BASE_PATH}/interfaces/kits/napi/common",
    "${FRAMEWORK_PATH}/innerkits/file_access/include",
    "//foundation/filemanagement/user_file_service/utils",
  ]

  sources = [
    "${UFS_BASE_PATH}/interfaces/kits/napi/common/file_extension_info_napi.cpp",
    "module_export_napi.cpp",
  ]

  deps = [ "//foundation/arkui/napi:ace_napi" ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]
}
